fix: command menu layout overflow

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@
 
 :root {
   --background: hsl(0 0% 3.9%);
+  --menu-background: hsl(0, 0%, 12%);
   --main-background: hsl(0, 0%, 7%);
   --foreground: hsl(0 0% 98%);
   --card: hsl(0 0% 3.9%);
@@ -41,6 +42,7 @@
 @theme inline {
   --color-background: var(--background);
   --color-main-background: var(--main-background);
+  --color-menu-background: var(--menu-background);
   --color-foreground: var(--foreground);
   --color-card: var(--card);
   --color-card-foreground: var(--card-foreground);
@@ -83,5 +85,12 @@
 
   .container {
     @apply px-4 xl:px-6 mx-auto max-w-screen-2xl;
+  }
+  .hide-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  .hide-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
   }
 }
